# goit-ds-hw-03

./: authors.json  config.ini  items.py  main.py  models.py  mongo_pipeline.py  pipelines.py  pyproject.toml  requirements.txt  spider.py
